--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,33 @@
 html {
   box-sizing: border-box;
 }
-*, *:after, *:before {
+
+*,
+*:after,
+*:before {
   box-sizing: inherit;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: orange;
 }
+
 .contenedor {
-  max-width:1000px;
-  margin:0 auto;
+  max-width: 1000px;
+  margin: 0 auto;
   padding: 20px;
   background-color: #ffffff;
 }
-h1, h2 {
+
+h1,
+h2 {
   text-align: center;
-  font-family: 'Proza Libre', sans-serif;
+  font-family: "Proza Libre", sans-serif;
+  text-transform: uppercase;
 }
+
 div.contenido {
   width: 60%;
   margin: 30px auto 0 auto;
@@ -28,81 +36,99 @@ div.contenido {
 
 h1 {
   font-size: 30px;
-  
 }
+
 h2 {
   font-size: 20px;
 }
+
 div.crear {
   padding: 20px;
   background-color: #e1e1e1;
+  border-radius: 10px;
 }
 
 div.campo {
   margin-bottom: 20px;
 }
+
 div.campo label {
   width: 80px;
   display: inline-block;
-  float: left;
   margin-top: 8px;
   font-family: Arial, Helvetica, Serif;
   text-transform: uppercase;
-  font-size:14px;
+  font-size: 14px;
   font-weight: bold;
   text-align: right;
   margin-right: 20px;
 }
+
 div.campo input {
   height: 30px;
   width: 70%;
   padding: 10px;
+  border-radius: 10px;
 }
+
 .boton {
   background-color: orange;
   border: none;
   padding: 10px 30px;
   cursor: pointer;
   color: white;
-  font-size:16px;
+  font-size: 16px;
   text-transform: uppercase;
+  border-radius: 10px;
 }
 
 div.buscar {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
-div.buscar h2 {
+
+div.buscar h2,
+div.crear h2 {
   margin-bottom: 10px;
 }
+
 .buscador {
   width: 100%;
   padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
+
 span#total {
   font-weight: bold;
-  font-family: arial,helvetica, sans-serif;
+  font-family: arial, helvetica, sans-serif;
 }
 
 div.existentes {
   padding: 20px;
   background-color: #e1e1e1;
+  border-radius: 10px;
 }
-div.existentes  table {
+
+div.existentes table {
   width: 100%;
   font-family: geneva;
   font-size: 16px;
   border-collapse: collapse;
 }
-div.existentes  table thead {
+
+div.existentes table thead {
   background-color: #ff9800;
 }
+
 div.existentes table thead th {
-    padding:10px 0;
+  padding: 10px 0;
 }
+
 div.existentes table tbody tr:nth-child(even) {
   background-color: #9e9e9e;
 }
-div.existentes  table a {
+
+div.existentes table a {
   background-color: #3f51b5;
   padding: 5px 10px;
   display: block;
@@ -110,20 +136,24 @@ div.existentes  table a {
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
+  border-radius: 10px;
 }
-div.existentes  table td {
+
+div.existentes table td {
   padding: 10px 0;
   line-height: 20px;
 }
+
 div.existentes h2 {
   margin-bottom: 20px;
 }
+
 div.existentes p {
   text-align: center;
-  margin-bottom: 20px;
 }
+
 td.borrar a {
-  background-color: red!important;
+  background-color: red !important;
 }
 
 a.volver {
@@ -133,18 +163,19 @@ a.volver {
 }
 
 div#mensaje {
-    margin-top: 10px;
-    border: 1px solid green;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    text-transform: uppercase;
-    background-color: green;
-    color: white;
-    font-family: arial, helvetica, sans-serif;
-    border-radius: 10px;
-    opacity: 0;
+  margin-top: 10px;
+  border: 1px solid green;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: green;
+  color: white;
+  font-family: arial, helvetica, sans-serif;
+  border-radius: 10px;
+  opacity: 0;
 }
+
 div#borrado {
   background-color: red;
   padding: 10px;
@@ -154,43 +185,77 @@ div#borrado {
   font-weight: bold;
   font-family: arial, helvetica, sans-serif;
   font-size: 16px;
+  margin-bottom: 20px;
+  border: 2px solid red;
+  border-radius: 10px;
 }
+
 @keyframes mostrar {
-  0% { opacity:0; }
-  100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
+
 @keyframes ocultar {
-  0% { opacity:1; }
-  100% {opacity:0;}
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .mostrar {
-  animation: mostrar .5s ease-in 1 forwards;
+  animation: mostrar 0.5s ease-in 1 forwards;
 }
+
 .ocultar {
-  animation: ocultar .5s ease-in 1 forwards;
+  animation: ocultar 0.5s ease-in 1 forwards;
 }
 
 button.borrar {
-    background-color: transparent;
-    border: none;
-    background-image: url(../img/borrar.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 20px;
-    text-indent: -9999px;
-    display: block;
-    height: 40px;
-    width: 40px;
-    cursor: pointer;
-    margin: 0 auto;
-    padding: 10px;
+  background-color: transparent;
+  border: none;
+  background-image: url(../img/borrar.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  text-indent: -9999px;
+  display: block;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  margin: 0 auto;
+  padding: 10px;
 }
+
 td.borrar input {
   margin: 0 auto;
   display: block;
 }
 
 .activo {
-  background-color: red!important;
+  background-color: red !important;
+}
+
+/* Modo edicion */
+.modo-edicion p,
+.modo-edicion .editarBtn,
+tbody tr input[type="text"],
+div.existentes table tr a.guardarBtn {
+  display: none;
+}
+
+.modo-edicion input[type='text'],
+div.existentes table tr.modo-edicion a.guardarBtn {
+  display: block;
+}
+
+.desactivado {
+  pointer-events: none;
+  cursor: default;
+  opacity: .5;
 }
